--- a/app/src/main/res/layout/empty_drops.xml
+++ b/app/src/main/res/layout/empty_drops.xml
@@ -5,26 +5,28 @@
     android:background="@drawable/background"
     android:orientation="vertical">
     <ImageView
-        android:layout_centerHorizontal="true"
-        android:layout_margin="84dp"
         android:id="@+id/img_logo"
-        android:layout_width="192dp"
-        android:layout_height="192dp"
+        android:layout_width="@dimen/logo_width"
+        android:layout_height="@dimen/logo_height"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="@dimen/logo_margin"
         android:src="@drawable/logo" />
     <Button
-        android:layout_centerHorizontal="true"
-        android:textSize="28sp"
-        android:textAllCaps="false"
-        android:layout_below="@+id/img_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
-        android:paddingLeft="60dp"
-        android:paddingRight="60dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:text="@string/add_drop"
+        android:layout_below="@+id/img_logo"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="@dimen/btn_add_it_margin"
+        android:background="@drawable/bg_btn_add_it"
         android:fontFamily="sans-serif-thin"
+        android:paddingBottom="@dimen/btn_add_it_paddingB"
+        android:paddingLeft="@dimen/btn_add_it_paddingL"
+        android:paddingRight="@dimen/btn_add_it_marginR"
+        android:paddingTop="@dimen/btn_add_it_paddingT"
+        android:text="@string/add_drop"
+        android:textAllCaps="false"
+        android:textColor="@color/btn_add_color"
+        android:textSize="28sp"
         />
 
 </RelativeLayout>
