--- a/app/src/main/res/layout/empty_drops.xml
+++ b/app/src/main/res/layout/empty_drops.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     android:orientation="vertical">
     <ImageView
         android:id="@+id/img_logo"
@@ -18,7 +17,7 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="@dimen/btn_add_it_margin"
         android:background="@drawable/bg_btn_add_it"
-        android:fontFamily="sans-serif-thin"
+        android:fontFamily="@string/btn_add_it_font"
         android:paddingBottom="@dimen/btn_add_it_paddingB"
         android:paddingLeft="@dimen/btn_add_it_paddingL"
         android:paddingRight="@dimen/btn_add_it_marginR"
