--- a/app/src/main/res/layout/empty_drops.xml
+++ b/app/src/main/res/layout/empty_drops.xml
@@ -11,6 +11,7 @@
         android:layout_margin="@dimen/logo_margin"
         android:src="@drawable/logo" />
     <Button
+        android:id="@+id/btn_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/img_logo"
