--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,7 @@
     <dimen name="btn_add_it_marginR">60dp</dimen>
     <dimen name="btn_add_it_paddingT">8dp</dimen>
     <dimen name="btn_add_it_paddingB">8dp</dimen>
+    <dimen name="tv_dialog_marginT">36dp</dimen>
+    <dimen name="tv_dialog_marginB">36dp</dimen>
+    <dimen name="tv_title_font_size">18sp</dimen>
 </resources>
