--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,5 +15,12 @@
         android:layout_below="@id/toolbar"
         android:background="@drawable/background"
         android:scaleType="centerCrop" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_drops"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar" />
     <include layout="@layout/empty_drops" />
+
 </RelativeLayout>
