--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="green">#05FFCA</color>
     <color name="dark_blue">#241543</color>
+    <color name="bg_drop_row_dark">#BD8E79BB</color>
+    <color name="bg_drop_row_light">#4A8E79BB</color>
 </resources>
