--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,24 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".mainscreen.MainActivity">
-
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
         android:background="@drawable/background"
         android:scaleType="centerCrop" />
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
 
-    <android.support.v7.widget.RecyclerView
+
+    <apripachkin.com.bucketdrops.widgets.BucketRecyclerView
         android:id="@+id/rv_drops"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         android:layout_below="@id/toolbar" />
-    <include layout="@layout/empty_drops" />
+    <include android:id="@+id/empty_drops"
+        layout="@layout/empty_drops" />
 
 </RelativeLayout>
