Corrected footer item decorator

--- a/app/src/main/res/layout/drop.xml
+++ b/app/src/main/res/layout/drop.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bg_row_drop"
     android:orientation="horizontal"
-    android:padding="22dp">
+    android:padding="@dimen/drop_padding">
 
     <ImageView
         android:layout_width="12dp"
