--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
     <dimen name="tv_dialog_marginT">36dp</dimen>
     <dimen name="tv_dialog_marginB">36dp</dimen>
     <dimen name="tv_title_font_size">18sp</dimen>
+    <dimen name="drop_padding">22dp</dimen>
 </resources>
