--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,8 @@
     <dimen name="tv_dialog_marginB">36dp</dimen>
     <dimen name="tv_title_font_size">18sp</dimen>
     <dimen name="drop_padding">22dp</dimen>
+    <dimen name="dialog_mark_text_size">24sp</dimen>
+    <dimen name="dialog_check_margin">96dp</dimen>
+    <dimen name="dialog_check_padding">16dp</dimen>
+    <dimen name="dialog_padding">24dp</dimen>
 </resources>
