--- a/app/src/main/res/layout/dialog_mark.xml
+++ b/app/src/main/res/layout/dialog_mark.xml
@@ -2,29 +2,30 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/dialog_padding"
     android:background="@color/bg_dialog"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/dialog_padding">
     <ImageButton
+        android:id="@+id/btn_close"
         android:layout_width="12dp"
         android:layout_height="12dp"
-        android:src="@drawable/ic_close"
-        android:background="@null"
-        android:id="@+id/btn_close"
         android:layout_above="@+id/btn_completed"
         android:layout_alignParentRight="true"
-        android:scaleType="fitCenter"/>
+        android:background="@null"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_close" />
     <Button
         android:id="@+id/btn_completed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginTop="@dimen/dialog_check_margin"
         android:layout_marginBottom="@dimen/dialog_check_margin"
-        android:drawableTop="@drawable/ic_check"
-        android:drawablePadding="@dimen/dialog_check_padding"
-        android:textSize="@dimen/dialog_mark_text_size"
+        android:layout_marginTop="@dimen/dialog_check_margin"
         android:background="@null"
+        android:drawablePadding="@dimen/dialog_check_padding"
+        android:drawableTop="@drawable/ic_check"
         android:text="@string/mark_completed"
-        android:textAllCaps="false"/>
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/dialog_mark_text_size" />
 </RelativeLayout>
