--- a/app/src/main/res/layout/drop.xml
+++ b/app/src/main/res/layout/drop.xml
@@ -22,6 +22,7 @@
         android:text="sampletext1" />
 
     <TextView
+        android:id="@+id/tv_when"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="sometext" />
