--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,17 @@
         <item name="android:textColor">@color/dark_blue</item>
     </style>
 
+    <style name="DatePickerItemStyle">
+        <item name="android:drawableTop">@drawable/up_normal</item>
+        <item name="android:drawableBottom">@drawable/down_normal</item>
+        <item name="android:drawablePadding">16dp</item>
+        <item name="android:background">@drawable/bg_picker_item_background</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">96dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textColor">@color/purple</item>
+    </style>
+
 </resources>
