--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/bg_dialog"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/bg_dialog">
 
     <TextView
         android:id="@+id/tv_title"
@@ -31,10 +31,10 @@
         android:maxLines="1"
         android:padding="16dp" />
 
-    <DatePicker
+    <apripachkin.com.bucketdrops.widgets.BucketPickerView
         android:id="@+id/bpv_date"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/et_drop" />
 
     <Button
