--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,9 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppTheme.Base" parent="Theme.AppCompat.NoActionBar"></style>
+
+    <style name="AppTheme" parent="AppTheme.Base">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -28,7 +30,7 @@
         <item name="android:background">@drawable/bg_picker_item_background</item>
         <item name="android:textSize">24sp</item>
         <item name="android:gravity">center</item>
-        <item name="android:layout_width">96dp</item>
+        <item name="android:layout_width">92dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:maxLines">1</item>
         <item name="android:textColor">@color/purple</item>
