--- a/app/src/main/res/layout/empty_drops.xml
+++ b/app/src/main/res/layout/empty_drops.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <ImageView
-        android:id="@+id/img_logo"
-        android:layout_width="@dimen/logo_width"
-        android:layout_height="@dimen/logo_height"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="@dimen/logo_margin"
-        android:src="@drawable/logo" />
-    <Button
-        android:id="@+id/btn_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/img_logo"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="@dimen/btn_add_it_margin"
-        android:background="@drawable/bg_btn_add_it"
-        android:fontFamily="@string/btn_add_it_font"
-        android:paddingBottom="@dimen/btn_add_it_paddingB"
-        android:paddingLeft="@dimen/btn_add_it_paddingL"
-        android:paddingRight="@dimen/btn_add_it_marginR"
-        android:paddingTop="@dimen/btn_add_it_paddingT"
-        android:text="@string/add_drop"
-        android:textAllCaps="false"
-        android:textColor="@color/btn_add_color"
-        android:textSize="28sp"
-        />
+    android:layout_height="match_parent">
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/img_logo"
+            android:layout_width="@dimen/logo_width"
+            android:layout_height="@dimen/logo_height"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="@dimen/logo_margin"
+            android:src="@drawable/logo" />
+
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/img_logo"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="@dimen/btn_add_it_margin"
+            android:background="@drawable/bg_btn_add_it"
+            android:fontFamily="@string/btn_add_it_font"
+            android:paddingBottom="@dimen/btn_add_it_paddingB"
+            android:paddingLeft="@dimen/btn_add_it_paddingL"
+            android:paddingRight="@dimen/btn_add_it_marginR"
+            android:paddingTop="@dimen/btn_add_it_paddingT"
+            android:text="@string/add_drop"
+            android:textAllCaps="false"
+            android:textColor="@color/btn_add_color"
+            android:textSize="28sp" />
+    </RelativeLayout>
+</ScrollView>
